--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="./css/all.css">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/vue.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/intervalsItem.js"></script>
+	<script src="js/intervalsTable.js"></script>
+	<script src="js/propertyItem.js"></script>
+	<script src="js/propertiesTable.js"></script>
 	<script src="js/ball.js"></script>
 	<script src="js/controls.js"></script>
 	<script src="js/graph.js"></script>
